Tidying up a few bugs and unit tests